--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,5 @@
-html {
-    min-height: 50%;
-  }
   body {
-    margin: 10%;
+    margin: 0;
     padding: 0;
     font-family: sans-serif;
     background-color: #130468ec ;
@@ -10,19 +7,26 @@ html {
     padding-bottom: 5rem;
     font-size: 13px;
   }
-  
+
   header {
-    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+  .encabezado{
+    z-index: 1;
   }
   header h1 {
     color: white;
   }
 
+  #buscar{
+    margin-left: 7rem;
+  }
 
-  #sura{
-    color: white;
+  #botones{
+    margin-left: 9rem;
   }
 
   .label{
+    align-self: center;
     color: white;
   }
